--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,41 +1,11 @@
-/* Variables, mixins */
 
-$bp-mobile: 320px;
-$bp-tablet: 768px;
-$bp-desktop: 1200px;
+@import '_vars';
+@import '_mixins';
 
-$color-lightgray: #f2f2f2;
+@import '_normalize';
+@import '_base';
 
-@mixin container-width {
-  max-width: $bp-mobile;
 
-  @media (min-width: $bp-tablet ) {
-    max-width: $bp-tablet;
-  }
-
-  @media (min-width: $bp-desktop ) {
-    max-width: $bp-desktop;
-  }
-}
-
-@mixin clear {
-  &:before,
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-}
-
-BODY {
-    background: #FFF;
-}
-
-.header,
-.footer,
-.main {
-  @include container-width;
-  margin: 1rem auto;
-  padding: .5rem;
-  border: 1px solid #DDD;
-}
+@import 'blocks/_header';
+@import 'blocks/_main';
+@import 'blocks/_footer';
