--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -15,3 +15,11 @@
   background: khaki;
   border: 1px solid rgba(0,0,0,.1);
 }
+
+.nav {
+
+}
+  .nav__item {
+        display: inline-block;
+        margin: 0 .5rem;
+      }
