--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -384,10 +384,15 @@ H1, H2, H3, H4, H5 {
   font-weight: normal; }
 
 /* LAYOUT */
+.wrapper {
+  min-width: 280px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  box-sizing: border-box; }
+
 .header,
 .container,
 .footer {
-  max-width: 320px;
   margin: 1rem auto;
   padding: .5rem;
   border: 1px solid #DDD; }
@@ -403,7 +408,6 @@ H1, H2, H3, H4, H5 {
   margin-left: 30px; }
 
 .header {
-  max-width: 320px;
   margin: 1rem auto;
   padding: .5rem;
   display: flex;
@@ -417,7 +421,6 @@ H1, H2, H3, H4, H5 {
   margin: 0 .5rem; }
 
 .footer {
-  max-width: 320px;
   display: flex;
   margin: 1rem auto;
   padding: .5rem;
@@ -434,25 +437,9 @@ H1, H2, H3, H4, H5 {
   display: inline-block;
   margin: 0 .5rem; }
 
-@media (min-width: 768px) {
-  .header,
-    .container,
-    .footer {
-    max-width: 768px; }
-  .header {
-    max-width: 768px; }
-  .footer {
-    max-width: 768px; } }
-
-@media (min-width: 1000px) {
-  .header,
-    .container,
-    .footer {
-    max-width: 1000px; }
-  .header {
-    max-width: 1000px; }
-  .footer {
-    max-width: 1000px; } }
+@media (min-width: 960px) {
+  .wrapper {
+    max-width: 960px; } }
 
 @media (max-width: 768px) {
   .container {
