--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -28,10 +28,12 @@ H1, H2, H3, H4, H5 {
 
 /* LAYOUT */
 
+.wrapper {
+  @include container-width;
+}
 .header,
 .container,
 .footer {
-  @include container-width;
   margin: 1rem auto;
   padding: .5rem;
   border: 1px solid #DDD;
